--- a/style.css
+++ b/style.css
@@ -1,1 +1,47 @@
-* {}
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
+
+.main1 {
+    height: 100vh;
+    width: 25%;
+    background-color: aquamarine;
+    float: left;
+}
+
+.main2 {
+    height: 100vh;
+    width: 75%;
+    background-color: rgb(156, 148, 163);
+    float: left;
+}
+
+.header {
+    height: 25vh;
+    background-color: chocolate;
+}
+
+.content {
+    height: 50vh;
+    background-color: chartreuse;
+}
+
+.footer {
+    height: 25vh;
+    background-color: rgb(20, 57, 220);
+}
+
+.article {
+    width: 75%;
+    height: 50vh;
+    background-color: gray;
+    float: left;
+}
+
+.aside {
+    width: 25%;
+    height: 50vh;
+    background-color: rgb(70, 70, 78);
+    float: left;
+}
